# CPP-Template-Sub1-Sub

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
include/: cpptemplatesub1sub.h  cpptemplatesubmodule1submodule.h  namedclass.h
src/: cpptemplatesub1sub_DARWIN.cpp  cpptemplatesub1sub_LINUX.cpp  cpptemplatesub1sub_WIN32.cpp  cpptemplatesubmodule1submodule_DARWIN.cpp  cpptemplatesubmodule1submodule_LINUX.cpp  cpptemplatesubmodule1submodule_WIN32.cpp
tests/: CMakeLists.txt  test_cpptemplatesub1sub.cpp  test_cpptemplatesubmodule1submodule.cpp
